2015-07-23 Release 0.4.0
- Add support for puppetlabs/apt >=2.0.0

2015-04-28 Release 0.3.0
- Ensure log env variables are exported so they are picked up by startup
scripts

2015-04-28 Release 0.2.0
- Fix issues with metadata.json preventing install

2015-04-28 Release 0.1.0
- Initial release