@@ -1,5 +1,7 @@
 2015-07-23 Release 0.4.0
 - Add support for puppetlabs/apt >=2.0.0
+- Remove support for ruby 1.8.7 and puppet 2.7
+- Cleanup travis matrix
 
 2015-04-28 Release 0.3.0
 - Ensure log env variables are exported so they are picked up by startup
